Fix focus state on Firefox

--- a/src/main.css
+++ b/src/main.css
@@ -284,7 +284,7 @@ input,
 select,
 textarea,
 video {
-  &:focus-visible {
+  &:focus {
     box-shadow: 0 0 0 3px hsl(var(--focus));
     outline: 0;
   }
